--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
       <h2>header</h2>
 
       <p>Lorem ipsum dolor sit amet.</p>
+
+      <ul>
+        <li>qwe</li>
+        <li>qwe</li>
+        <li>qwe</li>
+        <li>qwe</li>
+      </ul>
     </header>
   </body>
 </html>
