--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       <h2>header</h2>
 
       <p>Lorem ipsum dolor sit amet.</p>
+
+      <address>
+        <a href="">qwe</a>
+        <a href="">qwe</a>
+      </address>
     </header>
   </body>
 </html>
